[package]
name = "cascade-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
bcs = "0.1"
linera-sdk = "0.12"
linera-views = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = "z"
strip = true